--- a/index.css
+++ b/index.css
@@ -17,12 +17,12 @@ h1{
 
 h2 {
     font-size: 25px;
-    font-weight: bold;
     text-align: center;
 }
 
 h3{
-    font-size: 22px;
+    font-size: 18px;
+    
 }
 
 h4{
@@ -64,10 +64,24 @@ nav{
 .background-btn{
     background-color: #072AC8;
     color: aliceblue;
-    width: 150px;
-    height: 52px;
-    padding: 15px 36px 15px 36px;
-    
+    width:150px;
+    height: 50px;
+    padding: 5px;
+    margin: 20px;
+    font-size: 15px;
+    border: none;
+}
+
+.btns{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.btns a{
+    text-decoration: none;
+    color: #6B708D;
+    margin: 20px;
 }
 
 #nav-btn{
@@ -117,7 +131,14 @@ nav{
 .text{
     color: #6B708D;
     font-size: 18px;
-    /*text-align: center;*/
+    
+}
+
+.text-sect-1{
+    text-align: center;
+    margin: 10px 25px;
+    padding: 10px 15px;
+    line-height: 25px;
 }
 
 /*#section-1 div:nth-child(2){
@@ -145,23 +166,23 @@ nav{
 }*/
 
 .card {
-    background-color: aliceblue;
+    background-color: #F2F4FC;
     display: flex;
     flex-direction: column;
     margin: 30px 20px;
-    border-radius: 20px;
+    border-radius: 5%;
+    overflow: hidden;
 }
 .card article{
     padding: 10px;
-    margin: 10px;
-    
+    margin: 10px;   
 }
 
-.card article img{
-    width: 750px;
-    height: 650px;
-    border-top-left-radius: 20%;
-    border-bottom-right-radius: 20%;
+.img-card{
+    width: 350px;
+    height: 300px;
+    border-top-left-radius: 5%;
+    border-top-right-radius: 5%;
     /*text-align: center;
     display: flex;
     text-align: center;*/
@@ -177,46 +198,90 @@ nav{
 .card p{
     margin: 0 10px;
     padding: 15px;
-    }
+}
 
 .card a{
     margin: 0px 10px;
     padding: 30px 10px;
     font-family: roboto;
     font-size: 12px;
-    }
+}
 
 .testimonial-section{
     position: relative;
     background-image: url("/project-assets 2/testimonial-section/orbit.png");
     background-color: #292E47;
-    background-size: cover ;
+    background-size: contain;
     padding: 20px;
     margin: 30px 0;
+    width: 100%;
+    height: 700px;
  
-}
-
-.testimonial-section img{
-    width: 100px;
-    height: 100px;
 }
 
 .testimonial-section h2{
     color: #F2F4FC;
     line-height: 30px;
-    text-align: center;
-    margin: 20px 30px;
+    margin: 20px 40px;
+    padding: 0 50px;
+    /*position: absolute;
     display: flex;
     justify-content: center;
-    text-align: center;
+    align-items: center;
+    text-align: center;*/
 }
 
-.testimonial-section img:nth-child(5){
+.testimonial-section h3{
+    color: #FFC600;
+    text-align: center;
+    line-height: 25px;
+    margin: 20px 30px;
+    padding: 0 50px;
+}
+/*#profile-pic profile-name profile-link{
+    position: absolute; 
+}*/
+
+#profile-pic{
     border-top-left-radius: 50% 50%;
     border-top-right-radius: 50% 50%;
     border-bottom-right-radius: 50% 50%;
     border-bottom-left-radius: 50% 50%;
+    margin: 20px 30px;
+    width: 100px;
+    height: 100px;
+
 }
+.emoji{
+    width: 100px;
+    height: 100px;
+    /*margin: 20px;
+    padding: 20px;*/
+}
+
+#profile-name{
+    color: #A2D6F9;
+    margin: 20px 30px;
+    text-align: center;
+}
+
+#profile-link{
+    color: #F2F4FC;
+    text-decoration: none;
+    margin: 10px 30px;
+    text-align: center;
+}
+
+.img-services{
+    width: 40px;
+    height: 40px;
+    background-color: #A2D6F9;
+    border-radius: 50px;
+    padding: 5px;
+    margin-top: 20px;
+    margin-left: 20px;
+}
+
 
 
 
