--- a/index.css
+++ b/index.css
@@ -32,10 +32,10 @@ h4{
 
 nav{
     display:flex;
+    justify-content: space-around;
     flex-direction: row;
     margin: 30px 30px;
-    font-size: 15px;
-    font-weight: bold;
+    align-items: center;
 }
 
 
@@ -53,10 +53,11 @@ nav{
     text-decoration: none;
     color: #072AC8;
     padding: 30px;
+    font-size: 15px;
+    font-weight: bold;
 }
 
 .logo {
-    width: 100px;
     display: none;
 }
 
@@ -91,44 +92,33 @@ nav{
     display: none;
 }
 
-/*#section-1{
-    position: relative;
-    margin: 20px 30px;
-    padding: 20px;
-}*/
 
 #image-hero-section{
     position: relative;
-    display: flex;
-    margin: 20px 30px;
-    padding: 20px;
+    max-width: 340px;
+    width: 100%;
+    overflow: hidden;
 }
 
 #image-hero-section img:nth-child(1){
-    width: 320px;
-    /*margin: 50px;
-    padding: 10px;*/
+    width: 100%;
+   padding: 0 0 90px;
 }
 
 #image-hero-section img:nth-child(2){
     position: absolute;
     display: flex;
-   /*justify-content: flex-start;*/
-    top: -10px;
-    left: 0px;
-    width: 200px;
-    height: 300px;
-
+    top: -5px;
+    left: -14px;
+    width: 60%;
 }
 
 #image-hero-section img:nth-child(3){
     position: absolute;
     display: flex;
-    /*justify-content: flex-end;*/
-    bottom:-80px;
-    right: -70px;
-    width: 190px;
-    height: 230px;   
+    bottom:-4px;
+    right: -13px;
+    width: 60%;
 }
 
 .text{
@@ -144,23 +134,39 @@ nav{
     line-height: 25px;
 }
 
-/*#section-1 div:nth-child(2){
-    display: flex;
-    text-align: center;
-    padding: 30px;
-}*/
 
-#section-2 img{
+#client-section img{
     display: none;
+}
+.projects{
+    max-width: 370px;
+    width: 100%;
+    padding: 5px;
+    margin: 20px auto;
+    box-sizing: border-box;
+}
+
+.projects h2{
+    padding: 0 15px;
+}
+
+.cards{
+    display: flex;
+	flex-flow: column wrap;
+	justify-content: center;
+	margin: 5px 0;
 }
 
 .card {
     background-color: #F2F4FC;
     display: flex;
     flex-direction: column;
-    margin: 30px 20px;
+    flex: 1;
+    margin: 30px auto;
     border-radius: 5%;
     overflow: hidden;
+    max-width: 340px;
+    width: 100%;
 }
 .card article{
     padding: 10px;
@@ -168,13 +174,10 @@ nav{
 }
 
 .img-card{
-    width: 350px;
+    width: 340px;
     height: 300px;
     border-top-left-radius: 5%;
     border-top-right-radius: 5%;
-    /*text-align: center;
-    display: flex;
-    text-align: center;*/
 }
 
 
@@ -196,100 +199,118 @@ nav{
     font-size: 12px;
 }
 
-.testimonial-section{
+.testimonial{
     position: relative;
-    background-image: url("/project-assets 2/testimonial-section/orbit.png");
+    background-image: url("/project-assets 2/testimonial/orbit.png");
     background-color: #292E47;
     background-size: contain;
-    padding: 20px;
-    margin: 30px 0;
-    width: 370px;
-    height: 700px;
+    padding: 20px 0;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2,minmax(0,1fr));
+    justify-content: center;
+    align-items: center;
+    grid-column-gap: 20px;
+    grid-row-gap: 40px;
  
 }
 
-.testimonial-section h2{
+.testimonial h2{
     color: #F2F4FC;
     line-height: 30px;
     margin: 20px 40px;
     padding: 0 50px;
-    /*position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;*/
+    grid-column: 1/3;
 }
 
-.testimonial-section h3{
+.testimonial h3{
     color: #FFC600;
     text-align: center;
     line-height: 25px;
     margin: 20px 30px;
     padding: 0 50px;
+    grid-column: 1/3;
 }
-/*#profile-pic profile-name profile-link{
-    position: absolute; 
-}*/
 
+.testimonial_client{
+    grid-column: 1/3;
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+}
+
+.testimonial_profile_pic{
+    position: relative;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    overflow: hidden;
+}
 #profile-pic{
-    border-top-left-radius: 50% 50%;
-    border-top-right-radius: 50% 50%;
-    border-bottom-right-radius: 50% 50%;
-    border-bottom-left-radius: 50% 50%;
-    margin: 20px 30px;
-    width: 100px;
-    height: 100px;
-
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
-.emoji{
+
+.testimonial_emoji{
     width: 100px;
     height: 100px;
-    /*margin: 20px;
-    padding: 20px;*/
+    display: block;
+    margin: auto;
 }
 
 #profile-name{
     color: #A2D6F9;
-    margin: 20px 30px;
+    margin: 0;
     text-align: center;
+    display: flex;
 }
 
 #profile-link{
     color: #F2F4FC;
     text-decoration: none;
-    margin: 10px 30px;
     text-align: center;
+    display: flex;
 }
 
-.img-services{
-    width: 40px;
-    height: 40px;
-    background-color: #A2D6F9;
-    border-radius: 50px;
-    padding: 5px;
+.card_img{
+    position: relative;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    overflow: hidden;
     margin-top: 20px;
     margin-left: 20px;
+    padding: 14px;
+    background-color: #D1EDFF;
 }
 
-.section-5{
+.card_img_services{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    
+}
+
+.contact_us{
     padding: 10px 30px 10px 30px;
     background-color: #FFC600;
     margin: 30px 0;
-    width: 370px;
-    height: 300px;
+    width: 100%;
 }
 
-.section-5 h2{
+.contact_us h2{
     margin: 20px 30px 0 30px;
     padding: 20px 35px 10px 35px;
 }
 
-.section-5 p{
+.contact_us p{
     text-align: center;
     margin: 0;
 }
 
-.section-5 input{
+.contact_us input{
     display: block;
     margin: 20px 35px 5px 35px;
     padding: 15px 15px 10px 15px;
@@ -297,7 +318,21 @@ nav{
     text-align: center;
     width: 250px;
     height: 25px;
+    position: relative;
 }
+
+/*.contact_us_email_text::before{
+    background-image: ;
+}*/
+
+.contact_us_email_img{
+    width: 20px;
+	position: absolute;
+    display: block;
+	
+}
+
+
 
 .size-btn-sec-5{
     display: block;
@@ -306,41 +341,180 @@ nav{
     padding: 15px 10px 10px 10px;
     margin: 15px 50px 10px 50px;
 }
-footer div p{
-    line-height: 25px;
-    margin: 10px 20px 10px 20px;
+
+.footer{
+    padding: 20px 0;
+    /*width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2,minmax(0,1fr));
+    justify-content: center;
+    align-items: center;
+    grid-column-gap: 20px;
+    grid-row-gap: 40px;*/
 }
 
-footer div ul{
+.footer_container{
+    max-width: 340px;
+    width: 100%;
+    margin: auto;
+}
+
+.footer_container_row{
+    display: flex;
+	flex-wrap: wrap;
+}
+
+/*.footer_container_col_left img p{
+    grid-column: 1/3;
+    margin: 20px 40px;
+    padding: 0 50px;
+}
+
+.footer_container{
+    max-width: 1000px;
+    margin: auto;
+}
+.footer_container_row{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.footer_container_col_left p{
+    line-height: 25px;
+    margin: 10px 10px 10px 30px;
+    line-height: 25px;
+}*/
+
+.footer_container_contact_details_right ul {
     display: grid;
-    grid-template-columns: 150px 2fr;
+    grid-template-columns: repeat(2, 1fr);
     list-style: none;
     color: #6B708D;
     font-size: 15px;
-    padding: 20px;
-    margin: 10px;
     line-height: 25px;
     height: 210px;
 }
 
 
 @media (min-width:1024px){
+
+h1{
+    font-size: 60px;
+ }
+
+h2{
+        font-size: 40px;
+}
 .logo{
     display: flex;
+    width: 100px;
+    margin: 20px;
+    padding:20px;
+}
+
+
+nav-bar-center ul{
+    display: flex;
+    justify-content: center;
+    margin: 20px;
+    padding: 20px;
+    font-size: 18px;
+    align-items: center;  
+}
+
+.nav-bar-center ul li a{
+    padding: 30px;
+}
+    
+.background-btn{
+    background-color: #072AC8;
+    color: aliceblue;
+    font-size: 15px;
+    border: none;
+    width: 150px;
+    height: 52px;
 }
 
 #nav-btn{
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-nav-bar-center{
+.circlepj_hero{
+    display: grid;
+    grid-template-columns: repeat(2,minmax(0,1fr));
+    gap: 20px;
+    margin: 20px;
+    padding: 20px;
+}
+
+#image-hero-section{
+    max-width: 570px;
     display: flex;
-    justify-content: space-between;
-    margin: 0;
+    order: 2;
 }
 
-h1{
-    font-size: 60px;
+.circlepj_hero_info{
+    /*display: flex;*/
+    order: 1;
 }
+
+.projects{
+    max-width: 900px;
+    
+}
+
+.cards {
+    max-width: 1440px;
+    height: 561;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+}
+
+.card {
+    max-width: 340px;
+    height: 444px;
+    width: 100%;
+}
+  
+
+.img-card{
+    width: 340px;
+    height: 240px;
+    
+}
+
+
+
+
+
+
+
+
+
+.testimonial_profile_pic{
+    width: 100px;
+    height: 100px;
+}
+
+
+
+/*.footer_container_col_right ul {
+    grid-template-columns: repeat(, 1fr);
+
+}
+
+footer{
+margin:auto;
+}
+
+
+
+.footer_container_col_right {
+    width: 25%;
+}/*
 
 }
