--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:700|Roboto:100,300,700');
 
-html, body{
+* {
     font-family:roboto;
     padding: 0;
     margin: 0;
@@ -28,6 +28,33 @@ h3{
 h4{
     font-size: 24px;
     font-weight: bold;
+}
+
+.text_color{
+    color: #6B708D;
+}
+.intro_text{
+    font-size: 20px;
+}
+
+.intro_text_medium{
+    font-size: 24px;
+    color: #292E47;
+    margin: 0 10px;
+    padding: 15px;
+}
+
+.headline_regular{
+    font-size: 17px;
+    margin: 0 10px;
+    padding: 15px;
+}
+
+.text-link{
+    font-size: 15px;
+    text-decoration: none;
+    margin: 0px 10px;
+    padding: 30px 10px;
 }
 
 nav{
@@ -92,7 +119,6 @@ nav{
     display: none;
 }
 
-
 #image-hero-section{
     position: relative;
     max-width: 340px;
@@ -121,19 +147,12 @@ nav{
     width: 60%;
 }
 
-.text{
-    color: #6B708D;
-    font-size: 18px;
-    
-}
-
 .text-sect-1{
     text-align: center;
     margin: 10px 25px;
     padding: 10px 15px;
     line-height: 25px;
 }
-
 
 #client-section img{
     display: none;
@@ -142,12 +161,12 @@ nav{
     max-width: 370px;
     width: 100%;
     padding: 5px;
-    margin: 20px auto;
+    margin: auto;
     box-sizing: border-box;
 }
 
-.projects h2{
-    padding: 0 15px;
+.projects h3{
+    text-align: center;
 }
 
 .cards{
@@ -181,7 +200,7 @@ nav{
 }
 
 
-.card h3{
+/*.card h3{
     margin: 0 10px;
     padding: 15px;
    
@@ -196,8 +215,8 @@ nav{
     margin: 0px 10px;
     padding: 30px 10px;
     font-family: roboto;
-    font-size: 12px;
-}
+    font-size: 17px;
+}*/
 
 .testimonial{
     position: relative;
@@ -215,7 +234,7 @@ nav{
  
 }
 
-.testimonial h2{
+.intro-text-h3{
     color: #F2F4FC;
     line-height: 30px;
     margin: 20px 40px;
@@ -223,13 +242,14 @@ nav{
     grid-column: 1/3;
 }
 
-.testimonial h3{
+.intro-text-medium{
     color: #FFC600;
     text-align: center;
     line-height: 25px;
     margin: 20px 30px;
     padding: 0 50px;
     grid-column: 1/3;
+    font-size: 20px;
 }
 
 .testimonial_client{
@@ -298,6 +318,7 @@ nav{
     background-color: #FFC600;
     margin: 30px 0;
     width: 100%;
+    padding: 20px 0;
 }
 
 .contact_us h2{
@@ -307,43 +328,37 @@ nav{
 
 .contact_us p{
     text-align: center;
-    margin: 0;
+    margin: 20px;
 }
 
-.contact_us input{
-    display: block;
-    margin: 20px 35px 5px 35px;
+.contact_us_form {
+    margin: 20px auto;
+    padding:20px auto;
+    text-align: center;
+}
+
+.contact_us_form_email{
+    background-image: url("/project-assets 2/newsletter/icon/mail.svg");
+    background-repeat: no-repeat;
+    background-position: 30px;
+    margin: 10px 35px 10px 35px;
     padding: 15px 15px 10px 15px;
     border: none;
     text-align: center;
-    width: 250px;
-    height: 25px;
-    position: relative;
+    width: 65%; 
+    box-sizing: border-box;
 }
-
-/*.contact_us_email_text::before{
-    background-image: ;
-}*/
-
-.contact_us_email_img{
-    width: 20px;
-	position: absolute;
-    display: block;
-	
-}
-
 
 
 .size-btn-sec-5{
-    display: block;
-    width: 266px;
-    height: 50px;
-    padding: 15px 10px 10px 10px;
-    margin: 15px 50px 10px 50px;
+    width: 65%;
+    padding: 15px 15px 10px 15px;
+    margin: 15px 35px 10px 35px;
+    box-sizing: border-box;
 }
 
 .footer{
-    padding: 20px 0;
+    padding: 20px 20px;
     /*width: 100%;
     display: grid;
     grid-template-columns: repeat(2,minmax(0,1fr));
@@ -354,45 +369,26 @@ nav{
 }
 
 .footer_container{
-    max-width: 340px;
     width: 100%;
     margin: auto;
 }
 
-.footer_container_row{
-    display: flex;
-	flex-wrap: wrap;
-}
-
-/*.footer_container_col_left img p{
-    grid-column: 1/3;
-    margin: 20px 40px;
-    padding: 0 50px;
-}
-
-.footer_container{
-    max-width: 1000px;
-    margin: auto;
-}
-.footer_container_row{
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.footer_container_col_left p{
+.footer_container_contact_details_left_text{
     line-height: 25px;
-    margin: 10px 10px 10px 30px;
-    line-height: 25px;
-}*/
+    padding: 20px 0;
+}
 
 .footer_container_contact_details_right ul {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     list-style: none;
-    color: #6B708D;
-    font-size: 15px;
-    line-height: 25px;
+    
+}
+
+.footer_container_contact_details_right ul li a {
+    line-height: 35px;
     height: 210px;
+    color: #6B708D;
 }
 
 
@@ -403,8 +399,29 @@ h1{
  }
 
 h2{
-        font-size: 40px;
+     font-size: 50px;
 }
+
+h3{
+    font-size: 40px;
+}
+
+h4{
+    font-size: 24px;
+    font-weight: bold;
+}
+
+
+.intro_text{
+    font-size: 20px;
+}
+
+.intro_text_medium{
+    font-size: 24px;
+}
+
+
+
 .logo{
     display: flex;
     width: 100px;
@@ -461,7 +478,7 @@ nav-bar-center ul{
 }
 
 .projects{
-    max-width: 900px;
+    max-width: 1440px;
     
 }
 
@@ -476,7 +493,6 @@ nav-bar-center ul{
 
 .card {
     max-width: 340px;
-    height: 444px;
     width: 100%;
 }
   
@@ -487,12 +503,40 @@ nav-bar-center ul{
     
 }
 
+.testimonial{
+    max-width: 1320px;
+    grid-template-columns: unset;
 
 
+}
+
+.emoji-1{
+    order: 1;
+}
+.intro-text-h3{
+    order: 2;
+    grid-column:unset;
+}
+.emoji-2{
+    order: 3;
+}
+
+.intro-text-medium{
+    grid-column: 1/4;
+    order: 4;
+}
+.emoji-3{
+    order: 5;
+}
+.testimonial_client{
+    order: 6;
+    grid-column: unset;
+}
 
 
-
-
+.emoji-4{
+    order: 6;
+}
 
 
 .testimonial_profile_pic{
@@ -500,21 +544,26 @@ nav-bar-center ul{
     height: 100px;
 }
 
-
-
-/*.footer_container_col_right ul {
-    grid-template-columns: repeat(, 1fr);
-
+.contact_us{
+    max-width: 1320px;
 }
 
-footer{
-margin:auto;
+.contact_us_form_email{
+    margin: 10px 0px 10px 35px;
+    padding: 20px 15px 15px 15px;
+    width: 35%;  
 }
 
+.size-btn-sec-5{
+    padding: 15px 15px 10px 6px;
+    margin: 15px 35px 10px 10px;
+}
+.footer_container{
+display: flex;
+justify-content: space-between;
+}
+.footer_container_contact_details_right ul {
+    grid-template-columns: repeat(3, 1fr);
 
-
-.footer_container_col_right {
-    width: 25%;
-}/*
 
 }
