--- a/index.css
+++ b/index.css
@@ -1,15 +1,17 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:700|Roboto:100,300,700');
 
-* {
+body {
     font-family:roboto;
     padding: 0;
     margin: 0;
+    background-color: #F2F4FC;
 }
 
 h1, h2, h3{
     color: #292E47;
     font-weight: bold;
 }
+
 h1{
     font-size: 30px;
     text-align: center;
@@ -65,8 +67,6 @@ nav{
     align-items: center;
 }
 
-
-
 .nav-bar-center ul{
     list-style: none;
     margin: 0;
@@ -82,6 +82,14 @@ nav{
     padding: 30px;
     font-size: 15px;
     font-weight: bold;
+    border-radius: 10px;
+}
+
+.nav-bar-center ul li a:hover{
+    text-decoration: none;
+    color: #072AC8;
+    border: 1px solid #D1EDFF;
+    height: 30px;
 }
 
 .logo {
@@ -121,21 +129,23 @@ nav{
 
 #image-hero-section{
     position: relative;
-    max-width: 340px;
     width: 100%;
     overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #image-hero-section img:nth-child(1){
-    width: 100%;
-   padding: 0 0 90px;
+    width: 90%;
+    padding: 0 12px 90px;
 }
 
 #image-hero-section img:nth-child(2){
     position: absolute;
     display: flex;
     top: -5px;
-    left: -14px;
+    left: -28px;
     width: 60%;
 }
 
@@ -143,7 +153,7 @@ nav{
     position: absolute;
     display: flex;
     bottom:-4px;
-    right: -13px;
+    right: -46px;
     width: 60%;
 }
 
@@ -157,6 +167,7 @@ nav{
 #client-section img{
     display: none;
 }
+
 .projects{
     max-width: 370px;
     width: 100%;
@@ -177,16 +188,22 @@ nav{
 }
 
 .card {
-    background-color: #F2F4FC;
+    background-color:#ffffff;
     display: flex;
     flex-direction: column;
     flex: 1;
     margin: 30px auto;
-    border-radius: 5%;
     overflow: hidden;
     max-width: 340px;
     width: 100%;
+    box-shadow: 0px 38.775508880615234px 77.55101776123047px 0px #0000001A;
 }
+
+.card:hover{
+    background-color: #F2F4FC;
+    box-shadow: -16px 16px 13px 0px #6B708D;
+}
+
 .card article{
     padding: 10px;
     margin: 10px;   
@@ -195,35 +212,14 @@ nav{
 .img-card{
     width: 340px;
     height: 300px;
-    border-top-left-radius: 5%;
-    border-top-right-radius: 5%;
 }
-
-
-/*.card h3{
-    margin: 0 10px;
-    padding: 15px;
-   
-}
-
-.card p{
-    margin: 0 10px;
-    padding: 15px;
-}
-
-.card a{
-    margin: 0px 10px;
-    padding: 30px 10px;
-    font-family: roboto;
-    font-size: 17px;
-}*/
 
 .testimonial{
     position: relative;
     background-image: url("/project-assets 2/testimonial/orbit.png");
     background-color: #292E47;
     background-size: contain;
-    padding: 20px 0;
+    padding: 40px 0;
     width: 100%;
     display: grid;
     grid-template-columns: repeat(2,minmax(0,1fr));
@@ -231,8 +227,8 @@ nav{
     align-items: center;
     grid-column-gap: 20px;
     grid-row-gap: 40px;
- 
 }
+
 
 .intro-text-h3{
     color: #F2F4FC;
@@ -303,7 +299,8 @@ nav{
     margin-top: 20px;
     margin-left: 20px;
     padding: 14px;
-    background-color: #D1EDFF;
+    background-color: #ECF7FF;
+    
 }
 
 .card_img_services{
@@ -314,21 +311,22 @@ nav{
 }
 
 .contact_us{
-    padding: 10px 30px 10px 30px;
     background-color: #FFC600;
     margin: 30px 0;
     width: 100%;
     padding: 20px 0;
 }
 
-.contact_us h2{
+.contact_us h3{
     margin: 20px 30px 0 30px;
     padding: 20px 35px 10px 35px;
+    text-align: center;
 }
 
 .contact_us p{
     text-align: center;
     margin: 20px;
+    
 }
 
 .contact_us_form {
@@ -359,13 +357,6 @@ nav{
 
 .footer{
     padding: 20px 20px;
-    /*width: 100%;
-    display: grid;
-    grid-template-columns: repeat(2,minmax(0,1fr));
-    justify-content: center;
-    align-items: center;
-    grid-column-gap: 20px;
-    grid-row-gap: 40px;*/
 }
 
 .footer_container{
@@ -420,11 +411,9 @@ h4{
     font-size: 24px;
 }
 
-
-
 .logo{
     display: flex;
-    width: 100px;
+    width: 50%;
     margin: 20px;
     padding:20px;
 }
@@ -441,6 +430,7 @@ nav-bar-center ul{
 
 .nav-bar-center ul li a{
     padding: 30px;
+    font-size: 17px;
 }
     
 .background-btn{
@@ -464,6 +454,8 @@ nav-bar-center ul{
     gap: 20px;
     margin: 20px;
     padding: 20px;
+    align-items: center;
+    justify-content: center;
 }
 
 #image-hero-section{
@@ -472,15 +464,46 @@ nav-bar-center ul{
     order: 2;
 }
 
+#image-hero-section img:nth-child(2){
+    top: -5px;
+    left: -53px;
+}
+
+#image-hero-section img:nth-child(3){
+    bottom:-24px;
+    right: -73px;
+}
+
 .circlepj_hero_info{
     /*display: flex;*/
     order: 1;
+    max-width: 570px;
 }
 
-.projects{
-    max-width: 1440px;
+#client-section{
+    display: flex;
+    justify-content: space-around;
+    margin: 30px 0;
+}
+
+#client-section img{
+    display: flex;
+    width: 104px;
     
 }
+
+
+
+.projects{
+    max-width: 1440px; 
+}
+
+.projects h3{
+    text-align: unset;
+    margin: 80px 20px 20px 50px;
+    
+}
+
 
 .cards {
     max-width: 1440px;
@@ -504,7 +527,6 @@ nav-bar-center ul{
 }
 
 .testimonial{
-    max-width: 1320px;
     grid-template-columns: unset;
 
 
@@ -540,12 +562,21 @@ nav-bar-center ul{
 
 
 .testimonial_profile_pic{
-    width: 100px;
-    height: 100px;
+    width: 50px;
+    height: 50px;
 }
 
-.contact_us{
-    max-width: 1320px;
+#profile-name{
+   font-size: 17px;
+}
+
+#profile-link{
+    font-size: 13px;
+}
+
+.services h3{
+    text-align: unset;
+    margin: 80px 20px 20px 50px;
 }
 
 .contact_us_form_email{
@@ -558,6 +589,7 @@ nav-bar-center ul{
     padding: 15px 15px 10px 6px;
     margin: 15px 35px 10px 10px;
 }
+
 .footer_container{
 display: flex;
 justify-content: space-between;
@@ -565,5 +597,5 @@ justify-content: space-between;
 .footer_container_contact_details_right ul {
     grid-template-columns: repeat(3, 1fr);
 
-
+}
 }
