--- a/index.css
+++ b/index.css
@@ -59,7 +59,7 @@ h4{
     padding: 30px 10px;
 }
 
-nav{
+/*nav{
     display:flex;
     justify-content: space-around;
     flex-direction: row;
@@ -95,7 +95,9 @@ nav{
 .logo {
     display: none;
 }
-
+#nav-btn{
+    display: none;
+}*/
 
 .background-btn{
     background-color: #072AC8;
@@ -123,13 +125,15 @@ nav{
     margin: 20px;
 }
 
-#nav-btn{
-    display: none;
+.circlepj_hero{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #image-hero-section{
     position: relative;
-    width: 100%;
+    width: 60%;
     overflow: hidden;
     display: flex;
     justify-content: center;
@@ -236,6 +240,7 @@ nav{
     margin: 20px 40px;
     padding: 0 50px;
     grid-column: 1/3;
+    text-align: center;
 }
 
 .intro-text-medium{
@@ -245,7 +250,7 @@ nav{
     margin: 20px 30px;
     padding: 0 50px;
     grid-column: 1/3;
-    font-size: 20px;
+    font-size: 15px;
 }
 
 .testimonial_client{
@@ -258,8 +263,8 @@ nav{
 
 .testimonial_profile_pic{
     position: relative;
-    width: 80px;
-    height: 80px;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
     overflow: hidden;
 }
@@ -355,7 +360,7 @@ nav{
     box-sizing: border-box;
 }
 
-.footer{
+/*.footer{
     padding: 20px 20px;
 }
 
@@ -380,7 +385,7 @@ nav{
     line-height: 35px;
     height: 210px;
     color: #6B708D;
-}
+}*/
 
 
 @media (min-width:1024px){
@@ -460,6 +465,7 @@ nav-bar-center ul{
 
 #image-hero-section{
     max-width: 570px;
+    width: 100%;
     display: flex;
     order: 2;
 }
@@ -546,7 +552,11 @@ nav-bar-center ul{
 .intro-text-medium{
     grid-column: 1/4;
     order: 4;
+    font-size: 18px;
 }
+
+
+
 .emoji-3{
     order: 5;
 }
@@ -590,12 +600,12 @@ nav-bar-center ul{
     margin: 15px 35px 10px 10px;
 }
 
-.footer_container{
+/*.footer_container{
 display: flex;
 justify-content: space-between;
 }
 .footer_container_contact_details_right ul {
     grid-template-columns: repeat(3, 1fr);
 
-}
+}*/
 }
