more more more...

--- a/common.css
+++ b/common.css
@@ -67,7 +67,13 @@ footer{
     padding: 20px 0;
     font-size: 15px;
     color: #6B708D;
-  
+}
+
+.footer_text_link{
+    font-size: 15px;
+    text-decoration: none;
+    /*margin: 0px 10px;
+    padding: 30px 10px;*/
 }
 
 .footer_container_contact_details_right ul {
