--- a/contact-us.css
+++ b/contact-us.css
@@ -108,18 +108,21 @@ h4{
     font-size: 12px;
     color: #6B708D;
 }
-.contact_us_result_message {
+/*.contact_us_result_message {
     visibility: hidden;
-}
+}*/
 
 .contact_us_result_message_success {
     font-family: roboto;
     font-size: 17px;
     visibility: show;
-    background-color: green;
+    color: green;
     width: 75%;
     padding: 15px;
-    color: #F2F4FC;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    margin-top: 30px;
 }
 
 .contact_us_result_message_error {
@@ -130,6 +133,7 @@ h4{
     width: 75%;
     padding: 15px;
     color: #F2F4FC;
+    align-items: center;
 }
 
 .form-submit{
