--- a/index.css
+++ b/index.css
@@ -499,8 +499,6 @@ nav-bar-center ul{
     
 }
 
-
-
 .projects{
     max-width: 1440px; 
 }
@@ -535,17 +533,19 @@ nav-bar-center ul{
 
 .testimonial{
     grid-template-columns: unset;
-
-
+    width: 95%;
+    margin-left: 30px;
 }
 
 .emoji-1{
     order: 1;
 }
+
 .intro-text-h3{
     order: 2;
     grid-column:unset;
 }
+
 .emoji-2{
     order: 3;
 }
@@ -556,16 +556,14 @@ nav-bar-center ul{
     font-size: 18px;
 }
 
-
-
 .emoji-3{
     order: 5;
 }
+
 .testimonial_client{
     order: 6;
     grid-column: unset;
 }
-
 
 .emoji-4{
     order: 6;
@@ -588,6 +586,11 @@ nav-bar-center ul{
 .services h3{
     text-align: unset;
     margin: 80px 20px 20px 50px;
+}
+
+.contact_us{
+    width: 95%;
+    margin-left: 30px;
 }
 
 .contact_us_form_email{
